# LabProject

./: .gitattributes  .gitignore  README.md
Engine/: README.md
Engine/CMake/: CommonPathEnv.cmake  GitUtils.cmake  README.md  VcpkgManager.cmake
Engine/Core/: README.md
Engine/Core/SourceCode/: ComponentBaseTypes.h  CompressBox.cpp  CompressBox.h  CoreHelper.h  CoreTypes.h  EngineFramework.cpp  EngineFramework.h  EnviromentValue.cpp  EnvironmentValue.h  IComponent.cpp  IComponent.h  MemoryCoreSystem.cpp  MemoryCoreSystem.h  cpp.hint
Engine/Core/SourceCode/Algorithm/: AlgorithmExt.h
Engine/Core/SourceCode/Common/: BaseType_Floatings.cpp  BaseType_Floatings.h  BaseType_Integers.h  BaseTypes.h  EnumExtension.h  Exception.cpp  Exception.h  StackTracer.cpp  StackTracer.h
Engine/Core/SourceCode/Container/: ConcurrencyListenerList.h  ConcurrencyQueue.h  ConcurrencyUnorderedMap.h  ConcurrentUnorderedSet.h  ConcurrentVector.h  ContainerEnviroment.h  FixString.h  RingQueue.h  string.cpp  string.h
Engine/Core/SourceCode/Event/: DArgument.h  DBroadcaster.h  DListener.h  DeferredUpdater.cpp  DeferredUpdater.h  EventHelper.h  IDeferredUpdate.h  TBroadcastingStation.h
Engine/Core/SourceCode/Hash/: Hash.h
Engine/Core/SourceCode/Interface/Hardware/: IMouse.h
Engine/Core/SourceCode/Interface/Software/: IWindow.h
Engine/Core/SourceCode/Logger/: ILogger.h  RingLogger.h  TimeRecode.cpp  TimeRecode.h
Engine/Core/SourceCode/Math/: Point.h
Engine/Core/SourceCode/Memory/: APIObjectPtr.h  AlignMalloc.cpp  AlignMalloc.h  CacheAlignedAllocator.h  EmergencyMemory.cpp  EmergencyMemory.h  IObjectSizer.h  MemoryAlignedAllocator.h  MemoryBlock.h  MemoryHandlerSystem.cpp  MemoryHandlerSystem.h  MemoryUtil.cpp  MemoryUtil.h  _AlignMalloc.hpp
Engine/Core/SourceCode/Natvis/: CoreNatvis.natvis
Engine/Core/SourceCode/Pattern/: Singleton.h
Engine/Core/SourceCode/Platform/: PlatformBroadcastSystem.cpp  PlatformBroadcastSystem.h  PlatformInfo.h  PlatformMsgPump.cpp  PlatformMsgPump.h  PlatformSystem.cpp  PlatformSystem.h  PlatformSystemMode.cpp  PlatformSystemMode.h  PlatformTypes.h  PlatformWorker.h  PlatformWorkerQueue.cpp  PlatformWorkerQueue.h  WrappedDependentBaseType.h  stdafx.cpp  stdafx.h
Engine/Core/SourceCode/Platform/Common/: ArchType.cpp  ArchType.h  OSType.cpp  OSType.h  SimdType.cpp  SimdType.h
Engine/Core/SourceCode/Platform/Input/: KeyboardEventTypes.h  MouseEventTypes.h
Engine/Core/SourceCode/Platform/Window/: IWindow.cpp  IWindow.h  Window.h  WindowBaseTypes.h  WindowEventTypes.h  _WindowDetail.cpp  _WindowDetail.h
Engine/Core/SourceCode/Platform/X64/: X64_ISA.asm
Engine/Core/SourceCode/Platform/X64/SIMD/: SIMD_X64_Type.h
Engine/Core/SourceCode/Platform/X64/Windows/: WinDependentBaseType.h  stdafx_win.h
Engine/Core/SourceCode/Thread/: AsyncWait.h  BlockedRange.h  CriticalSection.h  Mutex.h  ParallelFor.h  Task.h  TaskSystem.cpp  TaskSystem.h  Thread.h
Engine/Core/SourceCode/Time/: Time.cpp  Time.h
Engine/Core/SourceCode/Type/: TypeTraits.h
Engine/Core/SourceCode/Util/: ArgumentRefinery.h  CommandParser.cpp  CommandParser.h  TextLiteral.h  TupleUtil.h
Engine/Core/SourceCode/XML/: XML.h
Engine/ExternalTools/: README.md
Engine/ExternalTools/CompilerTools/: CMakeLists.txt
Engine/ExternalTools/CompilerTools/IdleReflector/: ArgumentSet.txt  CMakeLists.txt  README.md
Engine/ExternalTools/CompilerTools/IdleReflector/Doc/: UserStory.md
Engine/ExternalTools/CompilerTools/IdleReflector/SourceCode/: main.cpp
Engine/ExternalTools/CompilerTools/IdleReflector/visual_stduio_cs_build/: IdleReflectorBuild.props
Engine/ExternalTools/CompilerTools/IdleReflector/vs_custom_build/: IdleReflectorBuild.targets  IdleReflectorBuild.xml
Engine/ExternalTools/CompilerTools/TestModule2/: CMakeLists.txt  main.cpp
Engine/ExternalTools/CompilerTools/TestModule2/TestModule3/: CMakeLists.txt  main.cpp
Engine/ExternalTools/VcpkgPipe/: CMakeLists.txt
Engine/ExternalTools/VcpkgPipe/VSProjects/: VSProjects.sln
Engine/ExternalTools/VcpkgPipe/VSProjects/VS2019/: BasePropertySheet.props  README.md  VS2019.vcxproj  VS2019.vcxproj.filters
Engine/ExternalTools/VcpkgPipe/etc/: VcpkgPipeGUI.fbp
Engine/ExternalTools/VcpkgPipe/src/: CMakeLists.txt  main.cpp
Engine/Foundation/: .editorconfig  .gitignore  .vpp_ignore  CMakeLists.txt  LICENSE  README.md
Engine/Foundation/Dummy/: CMakeLists.txt  Dummy.cpp
Engine/Foundation/VcpkgPort/: usage
Engine/Foundation/include/: BaseTypes.h  CMakeLists.txt  Version.cpp.in  Version.h  Version_cmake_gen.cpp  base_types.h  compiler_directive.h  enum_util.h  hash.h  lang_util.h  span.h  type_traits_ext.h
Engine/Foundation/include/Dummy/: CMakeLists.txt  Dummy.cpp  Dummy.h
Engine/Foundation/include/base_type/: CMakeLists.txt  base_type_floatings.h  base_type_integers.h  base_type_x64_common.h
Engine/Foundation/include/compiler_directive/: CMakeLists.txt  target_arch.h  target_os.h
Engine/Foundation/include/platform/: CMakeLists.txt
Engine/Foundation/include/reflection/: CMakeLists.txt  dummy.cpp  lang_type.h  type_dump.h  type_info.cpp  type_info.h  type_name.h  type_name_clang.h  type_name_msvc.h  type_storage.h
Engine/Foundation/vcpkg_port/: CONTROL  portfile.cmake
Engine/Foundation_GTest/: CMakeLists.txt  enum_util_test.cpp  main.cpp  reflection_test.cpp  type_traits_ext_test.cpp  version_test.cpp
Engine/Installed/: .gitignore
Engine/tmp/CompilerDirective/: TargetOS.h
Engine/tmp/CompilerDirective/VcpkgPort/: CONTROL  portfile.cmake
Engine/tmp/Exception/: UncaughtExceptionMarker.h
Extras/: README.md
